--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-dns="host=localhost user=postgres password=1 dbname=adam-store port=5432 sslmode=disable TimeZone=Asia/Shanghai"
+dns="host=localhost user=root password= dbname=demo_test port=3306 sslmode=disable TimeZone=Asia/Shanghai"
