--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
-dns="host=localhost user=root password= dbname=demo_test port=3306 sslmode=disable TimeZone=Asia/Shanghai"
+DB="root:@tcp(localhost:3306)/demo_test?charset=utf8mb4&parseTime=True&loc=Local"
+SECRET=duydo8
